--- a/source/refind.conf
+++ b/source/refind.conf
@@ -268,6 +268,7 @@ timeout 20
 # On Macs, default is internal,hdbios,external,biosexternal,optical,cd,manual
 #
 #scanfor internal,external,optical,manual
+scanfor internal,external,biosexternal,optical,cd,manual
 
 # By default, rEFInd relies on the UEFI firmware to detect BIOS-mode boot
 # devices. This sometimes doesn't detect all the available devices, though.
@@ -315,6 +316,7 @@ timeout 20
 # The default is "LRS_ESP".
 #
 #dont_scan_volumes "Recovery HD"
+dont_scan_volumes "Preboot"
 
 # Directories that should NOT be scanned for boot loaders. By default,
 # rEFInd doesn't scan its own directory, the EFI/tools directory, the
@@ -355,6 +357,7 @@ timeout 20
 # (where "{arch}" is the architecture code, like "x64").
 #
 #dont_scan_files shim.efi,MokManager.efi
+dont_scan_files grubx64.efi
 
 # Scan for Linux kernels that lack a ".efi" filename extension. This is
 # useful for better integration with Linux distributions that provide
