--- a/source/refind.conf
+++ b/source/refind.conf
@@ -357,7 +357,8 @@ dont_scan_volumes "Preboot"
 # (where "{arch}" is the architecture code, like "x64").
 #
 #dont_scan_files shim.efi,MokManager.efi
-dont_scan_files grubx64.efi
+dont_scan_files grubx64.efi,bootx64.efi
+#dont_scan_files "/EFI/Manjaro/grubx64.efi"
 
 # Scan for Linux kernels that lack a ".efi" filename extension. This is
 # useful for better integration with Linux distributions that provide
