--- a/source/refind.conf
+++ b/source/refind.conf
@@ -569,7 +569,7 @@ menuentry "Arch Linux" {
 
 # A sample entry for loading Ubuntu using its standard name for
 # its GRUB 2 boot loader. Note uses of Linux-style forward slashes
-menuentry Ubuntu {
+menuentry "Ubuntu" {
     loader /EFI/ubuntu/grubx64.efi
     icon /EFI/refind/themes/rEFInd-minimal/icons/os_ubuntu.png
     disabled
@@ -608,10 +608,16 @@ menuentry "Windows via shell script" {
 # it may serve as a starting point. Note that you'll almost
 # certainly need to change the "volume" line for this example
 # to work.
-menuentry "My macOS" {
+menuentry "MacOS" {
     icon \EFI\refind\themes\rEFInd-minimal\icons\os_mac.png
     volume "macOS boot"
     loader \System\Library\CoreServices\boot.efi
     disabled
 }
+
+#menuentry "Manjaro" {
+#    volume "Manjaro boot"
+#    loader /EFI/Manjaro/grubx64.efi
+#}
+
 include themes/rEFInd-minimal/theme.conf
